Update form and logic working. Currently running into problems with REST vs HTML forms. HTML forms need to use HTTP POST, even if the change should be a "PUT".
This is a known problem with REST and I dont have a final solution yet.

--- a/WebContent/WEB-INF/templates/posts/update.vm
+++ b/WebContent/WEB-INF/templates/posts/update.vm
@@ -19,7 +19,7 @@
 	</tbody>
 </table>
 
-<form action="/tiramisu/posts/$!post.getId()" method="PUT">
+<form action="/tiramisu/posts/update/$!post.getId()" method="POST">
 	<div>
 		<label for="title">Title:</label>
 		<input type="text" id="title" name="post_title" value="$!post.getTitle()" />
