SLF4J included, just using basic JDK logging for now. Tweaked static directory to be served by tomcat, for now.

--- a/WebContent/WEB-INF/templates/layout.vm
+++ b/WebContent/WEB-INF/templates/layout.vm
@@ -7,6 +7,7 @@
         <meta name="description" content="Tiramisu Application">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="format-detection" content="telephone=no">
+        <link rel="stylesheet" href="$!STATIC_ROOT/static/wut.css" />
 	</head>
 	<body>#parse($!content)</body>
 </html>
