Successful register and login system has been implemented into the application. The application uses the https://github.com/jeremyh/jBCrypt library to implement bcrypt. It also features a salt and pepper system, where the salt is unique and stored in the database and the pepper is application wide and stored in a content parameter.

--- a/src/main/webapp/WEB-INF/templates/users/login.vm
+++ b/src/main/webapp/WEB-INF/templates/users/login.vm
@@ -1,17 +1,13 @@
-<form action="/tiramisu/users/register" method="POST">
+<form action="/tiramisu/users/login" method="POST">
 	<div>
 		<label for="username">Username:</label>
 		<input type="text" id="username" name="user_username" />
-	</div>
-	<div>
-		<label for="email">Email:</label>
-		<input type="text" id="email" name="user_email" />
 	</div>
 	<div>
 		<label for="password">Password:</label>
 		<input type="password" id="password" name="user_password" />
 	</div>
 	<div>
-		<button type="submit">Create User</button>
+		<button type="submit">Login</button>
 	</div>
 </form>
