--- a/src/main/webapp/WEB-INF/templates/layout.vm
+++ b/src/main/webapp/WEB-INF/templates/layout.vm
@@ -15,6 +15,7 @@
 		<div class="banner flex-container">
 			<h1 class="layout-margin">Hello Tiramisu</h1>
 		</div>
+		<div id="messages">#parse('messages.vm')</div>
 		<div>#parse($!content)</div>
 	</body>
 </html>
